--- a/balwana.html
+++ b/balwana.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>BEM</title>
+    <title>UKM Balwana</title>
     <link rel="stylesheet" href="style4.css">
     <link rel="icon" type="image/png" href="logo.png">
   </head>
@@ -42,19 +42,16 @@
   			</ul>
   		</div>
       <div class="content">
-        <h2>Badan Eksekutif Mahasiswa</h2>
-        <img src="logobem.png" width="100" height="100" class="center">
-        <p><b>Visi</b></p>
-        <p>"Tercapainya pendidikan yang kompeten terutama di bidang IPTEKS yang didasari tanggung jawab dan sikap profesionalisme serta menyatukan 3 potensi dasar kepemimpinan pemuda yaitu intelektual, spiritual, dan jasad sehingga menjadikan mahasiswa yang bertaqwa kepada Tuhan Yang Maha Esa"</p>
-        <p><b>Misi</b></p>
-        <p>1. Mengadakan kegiatan kemahasiswaan yang bertujuan untuk mengembangkan IPTEKS</p>
-        <p>2. Meningkatkan kualitas sumberdaya manusia di bidang akademik dan non akademik</p>
-        <p>3. Memperkenalkan fakultas di lingkungan masyarakat luas</p>
-        <p>4. Menjalin hubungan dan kerjasama atas dasar kekeluargaan dengan organisasi di dalam atau di luar Fakultas</p>
-        <p>5. Melaksanakan setiap kegiatan dengan disiplin, konsisten, dan bertanggung jawab</p>
-        <p>6. Menyelenggarakan kegiatan sosial yang berasaskan Ketuhanan Yang Maha Esa</p>
-        <p>7. Mempererat tali persaudaraan antar mahasiswa khususnya mahasiswa Fakultas</p>
-        <p><a href="http://bem.ilkom.unej.ac.id/">https://bem.ilkom.unej.ac.id</a></p>
+        <h2>UKM Balwana</h2>
+        <img src="logo balwana.png" width="100" height="100" class="center">
+        			<p><b>Visi</b></p>
+        			<p>"Membentuk pribadi anggota yang tanggap akan kelestarian alam dan lingkungan, memiliki rasa persaudaraan dan loyalitas yang tinggi dalam berorganisasi, serta bersedia mengabdi kepada Tuhan, bangsa, dan tanah air."</p>
+        			<p><b>Misi</b></p>
+        			<p>1. Menyelenggarakan kegiatan yang mendukung terciptanya kelestarian alam.</p>
+        			<p>2. Berperan aktif dalam berbagai kegiatan pengabdian masyarakat.</p>
+        		  <p>3. Menjalin dan mempererat tali persaudaraan antar sesama pecinta alam di Indonesia.</p>
+        			<p>4. Menjunjung tinggi loyalitas terhadap organisasi.</p>
+        			<p><a href="https://www.instagram.com/mapalabalwana/">https://www.instagram.com/mapalabalwana/</a></p>
       </div>
       </div>
   </body>
