--- a/bin.html
+++ b/bin.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Form BPM</title>
+    <title>Form Binary</title>
     <link rel="stylesheet" href="style3.css">
     <link rel="icon" type="image/png" href="logo.png">
   </head>
@@ -31,7 +31,7 @@
     <tr>
     <td>
 <div class="judul">
-    <h1><font color="black" face="freestyle script" size="7">Form Pendaftaran Anggota BPM 2k18 </h1>
+    <h1><font color="black" face="freestyle script" size="7">Form Pendaftaran Anggota Binary 2k18 </h1>
 <br>
 </div>
 
@@ -69,16 +69,6 @@
     Motto                   <br>
     <input type = "text" id = "motto" placeholder= "Motto" required=""><br><br>
 
-    Pengalaman Berorganisasi <br>
-    <input type = "text" id = "pengalaman" placeholder= "Pengalaman Organisasi" required=""><br><br>
-
-    Divisi yang diinginkan   <br>
-    <select id = "divisi">
-      <option> Komisi Legalisasi
-      <option> Komisi Pengawas BEM
-      <option> Komisi Aspirasi
-    </select><br><br>
-
     Deskripsi Diri           <br>
     <input type = "text" id = "deskripsi" placeholder=" Deskripsi diri" required="">
 
@@ -104,8 +94,6 @@
       <td> Alamat Email </td>
       <td> Alasan Ikut Organisasi </td>
       <td> Motto </td>
-      <td>Pengalaman Berorganisasi</td>
-      <td>Divisi yang diinginkan</td>
       <td>Deskripsi Diri</td>
 
 </tr>
