--- a/binary.html
+++ b/binary.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>BEM</title>
+    <title>UKM Binary</title>
     <link rel="stylesheet" href="style4.css">
     <link rel="icon" type="image/png" href="logo.png">
   </head>
@@ -30,7 +30,7 @@
     <div class="badan">
   		<div class="sidebar">
   			<ul>
-          <li><a href="bem.html">BEM</a></li>
+  				<li><a href="bem.html">BEM</a></li>
         	<li><a href="https://www.instagram.com/bpmilkomunej/">BPM</a></li>
   				<li><a href="himasif.html">Himasif</a></li>
           <li><a href="https://www.instagram.com/himatifunej/">Himatif</a></li>
@@ -42,19 +42,15 @@
   			</ul>
   		</div>
       <div class="content">
-        <h2>Badan Eksekutif Mahasiswa</h2>
-        <img src="logobem.png" width="100" height="100" class="center">
+        <h2>UKM Binary</h2>
+        <img src="logo binary.png" width="100" height="100" class="center">
         <p><b>Visi</b></p>
-        <p>"Tercapainya pendidikan yang kompeten terutama di bidang IPTEKS yang didasari tanggung jawab dan sikap profesionalisme serta menyatukan 3 potensi dasar kepemimpinan pemuda yaitu intelektual, spiritual, dan jasad sehingga menjadikan mahasiswa yang bertaqwa kepada Tuhan Yang Maha Esa"</p>
+        <p>"Mewujudkan budaya demokratis mahasiswa di lingkungan sosial dan kampus"</p>
         <p><b>Misi</b></p>
-        <p>1. Mengadakan kegiatan kemahasiswaan yang bertujuan untuk mengembangkan IPTEKS</p>
-        <p>2. Meningkatkan kualitas sumberdaya manusia di bidang akademik dan non akademik</p>
-        <p>3. Memperkenalkan fakultas di lingkungan masyarakat luas</p>
-        <p>4. Menjalin hubungan dan kerjasama atas dasar kekeluargaan dengan organisasi di dalam atau di luar Fakultas</p>
-        <p>5. Melaksanakan setiap kegiatan dengan disiplin, konsisten, dan bertanggung jawab</p>
-        <p>6. Menyelenggarakan kegiatan sosial yang berasaskan Ketuhanan Yang Maha Esa</p>
-        <p>7. Mempererat tali persaudaraan antar mahasiswa khususnya mahasiswa Fakultas</p>
-        <p><a href="http://bem.ilkom.unej.ac.id/">https://bem.ilkom.unej.ac.id</a></p>
+           <p>1. Menumbuhkan budaya kritis dan berwacana.</p>
+           <p>2. Mengembangkan minat mahasiswa Program Studi Sistem Informasi untuk berkarya dalam bidang jurnalistik dan desain grafis.</p>
+           <p>3. Menciptakan jurnalis-jurnalis yang berkompeten dan independen.</p>
+         <p><a href="http://binaryupdate.org/">http://binaryupdate.org/</a></p>
       </div>
       </div>
   </body>
