--- a/feedback.html
+++ b/feedback.html
@@ -20,7 +20,7 @@
 <button class="drop"> ☰ </button>
 <div class="dropdown-content">
   <a href="beranda.html">Beranda</a>
-  <a href="#">Struktur BEM</a>
+  <a href="bem.html">Struktur BEM</a>
   <a href="#">Struktur BPM</a>
   <a href="#">Struktur HIMASIF</a>
   <a href="shimatiif.html">Struktur HIMATIIF</a>
@@ -29,12 +29,15 @@
 </div>
 </div>
 </body>
+  <body>
 <br><br><br><br><br><br>
 <div class="feedback">
-  <body>
     <p> Formulir anda telah diterima.</p>
     <p> Selanjutnya, admin akan menghubungi anda melalui nomor yang tertera.</p>
     <p> Terimakasih. </p>
-  </body>
 </div>
+    <div class = "footer">
+      <p> Copyright©Ari Puji Astuti-Sintya Septina Rianti</p>
+    </div>
+  </body>
 </html>
