--- a/fmacho.html
+++ b/fmacho.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Form BPM</title>
+    <title>Form MACHO</title>
     <link rel="stylesheet" href="style3.css">
     <link rel="icon" type="image/png" href="logo.png">
   </head>
@@ -31,7 +31,7 @@
     <tr>
     <td>
 <div class="judul">
-    <h1><font color="black" face="freestyle script" size="7">Form Pendaftaran Anggota BPM 2k18 </h1>
+    <h1><font color="black" face="freestyle script" size="7">Form Pendaftaran Anggota UKM-O Macho 2k18 </h1>
 <br>
 </div>
 
@@ -69,14 +69,14 @@
     Motto                   <br>
     <input type = "text" id = "motto" placeholder= "Motto" required=""><br><br>
 
-    Pengalaman Berorganisasi <br>
-    <input type = "text" id = "pengalaman" placeholder= "Pengalaman Organisasi" required=""><br><br>
-
-    Divisi yang diinginkan   <br>
+    Cabang Olahraga   <br>
     <select id = "divisi">
-      <option> Komisi Legalisasi
-      <option> Komisi Pengawas BEM
-      <option> Komisi Aspirasi
+    <option> Futsal
+    <option> Basket
+    <option> Badminton
+    <option> Tenis meja
+    <option> Voli
+    <option> Sepak Bola
     </select><br><br>
 
     Deskripsi Diri           <br>
@@ -102,10 +102,8 @@
       <td>No Telephone</td>
       <td>  Alamat di Jember </td>
       <td> Alamat Email </td>
-      <td> Alasan Ikut Organisasi </td>
       <td> Motto </td>
-      <td>Pengalaman Berorganisasi</td>
-      <td>Divisi yang diinginkan</td>
+      <td>Cabang Olahraga</td>
       <td>Deskripsi Diri</td>
 
 </tr>
