--- a/macho.html
+++ b/macho.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>BEM</title>
+    <title>UKM Macho</title>
     <link rel="stylesheet" href="style4.css">
     <link rel="icon" type="image/png" href="logo.png">
   </head>
@@ -42,19 +42,16 @@
   			</ul>
   		</div>
       <div class="content">
-        <h2>Badan Eksekutif Mahasiswa</h2>
-        <img src="logobem.png" width="100" height="100" class="center">
-        <p><b>Visi</b></p>
-        <p>"Tercapainya pendidikan yang kompeten terutama di bidang IPTEKS yang didasari tanggung jawab dan sikap profesionalisme serta menyatukan 3 potensi dasar kepemimpinan pemuda yaitu intelektual, spiritual, dan jasad sehingga menjadikan mahasiswa yang bertaqwa kepada Tuhan Yang Maha Esa"</p>
-        <p><b>Misi</b></p>
-        <p>1. Mengadakan kegiatan kemahasiswaan yang bertujuan untuk mengembangkan IPTEKS</p>
-        <p>2. Meningkatkan kualitas sumberdaya manusia di bidang akademik dan non akademik</p>
-        <p>3. Memperkenalkan fakultas di lingkungan masyarakat luas</p>
-        <p>4. Menjalin hubungan dan kerjasama atas dasar kekeluargaan dengan organisasi di dalam atau di luar Fakultas</p>
-        <p>5. Melaksanakan setiap kegiatan dengan disiplin, konsisten, dan bertanggung jawab</p>
-        <p>6. Menyelenggarakan kegiatan sosial yang berasaskan Ketuhanan Yang Maha Esa</p>
-        <p>7. Mempererat tali persaudaraan antar mahasiswa khususnya mahasiswa Fakultas</p>
-        <p><a href="http://bem.ilkom.unej.ac.id/">https://bem.ilkom.unej.ac.id</a></p>
+        <h2>UKM Macho</h2>
+        <img src="logo macho.png" width="100" height="100" class="center">
+        			<p>UKM-O Macho adalah ukm yang bergerak dibidang olahraga.
+                Ukm ini memiliki 5 bidang olahraga yaitu Sepak Bola, Futsal, Basket, Volly, Badminton.
+                UKM-O Macho pertama kali cabang olahraganya cuma futsal namanya SIFUT dibentuk tahun 2009 sama pak beni.
+                Juli tahun 2011 baru diresmikan UKMO, cabangnya ada basket futsal badminton.<br>
+                Tahun2 selanjutnya cabornya nambah terus dan smpek skrg ada 6 cabor (Futsal, basket, badminton, tenis meja, voli, sepakbola)
+                tp untuk tahun ini sepak bola masih fakum. 1Nama UKMO MACO diresmikan tgl 22 april 2016 pas kepengurusan mas bagus akbar .
+                Macho singkatan dari men sana in corpore sano yang artinya di dalam tubuh yg kuat terdapat jiwa yg sehat.</p>
+        			<p><a href="https://www.instagram.com/etalase.gallery/">https://www.instagram.com/etalase.gallery/</a></p>
       </div>
       </div>
   </body>
