--- a/al.html
+++ b/al.html
@@ -19,7 +19,7 @@
 <button class="drop"> ☰ </button>
 <div class="dropdown-content">
   <a href="beranda.html">Beranda</a>
-  <a href="#">Struktur BEM</a>
+  <a href="bem.html">Struktur BEM</a>
   <a href="#">Struktur BPM</a>
   <a href="#">Struktur HIMASIF</a>
   <a href="shimatiif.html">Struktur HIMATIIF</a>
