--- a/laos.html
+++ b/laos.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>BEM</title>
+    <title>UKM Laos</title>
     <link rel="stylesheet" href="style4.css">
     <link rel="icon" type="image/png" href="logo.png">
   </head>
@@ -42,19 +42,18 @@
   			</ul>
   		</div>
       <div class="content">
-        <h2>Badan Eksekutif Mahasiswa</h2>
-        <img src="logobem.png" width="100" height="100" class="center">
-        <p><b>Visi</b></p>
-        <p>"Tercapainya pendidikan yang kompeten terutama di bidang IPTEKS yang didasari tanggung jawab dan sikap profesionalisme serta menyatukan 3 potensi dasar kepemimpinan pemuda yaitu intelektual, spiritual, dan jasad sehingga menjadikan mahasiswa yang bertaqwa kepada Tuhan Yang Maha Esa"</p>
-        <p><b>Misi</b></p>
-        <p>1. Mengadakan kegiatan kemahasiswaan yang bertujuan untuk mengembangkan IPTEKS</p>
-        <p>2. Meningkatkan kualitas sumberdaya manusia di bidang akademik dan non akademik</p>
-        <p>3. Memperkenalkan fakultas di lingkungan masyarakat luas</p>
-        <p>4. Menjalin hubungan dan kerjasama atas dasar kekeluargaan dengan organisasi di dalam atau di luar Fakultas</p>
-        <p>5. Melaksanakan setiap kegiatan dengan disiplin, konsisten, dan bertanggung jawab</p>
-        <p>6. Menyelenggarakan kegiatan sosial yang berasaskan Ketuhanan Yang Maha Esa</p>
-        <p>7. Mempererat tali persaudaraan antar mahasiswa khususnya mahasiswa Fakultas</p>
-        <p><a href="http://bem.ilkom.unej.ac.id/">https://bem.ilkom.unej.ac.id</a></p>
+        <h2>UKM Laos</h2>
+        <img src="logo laos.png" width="100" height="100" class="center">
+        			<p>Ukm laos merupakan wadah mahasiswa pssi yang tertarim kepada dunia sistem operasi open source terutama linux.
+                UKM Laos adalah ukm yang menjadi tempat berkumpulnya para pecinta linux maupun orang yang ingin mengerti lebih
+                tentang mata kuliah pemrograman yang ada di PSSI. UKM ini pertama kali didirikan oleh Pak diksi yang sekarang menjadi
+                salah satu dosen di PSSI.<br>
+                Di dalam UKM LAOS terdapat pertemuan rutin setiap hari selasa malam dan jumat malam yang akan diisi oleh divisi yang
+                ada di UKM LAOS. Divisi itu yaitu sistem operasi,jaringan,multimedia, dan pemrograman yang masing masing divisi diberi
+                waktu 2x pertemuan an untuk menyampaikan materi mengenai divisi yang dikelola kepada anggota UKM laos lainnya.<br>
+                Tidak hanya pertemuan rutin, UKM LAOS juga memiliki beberapa kegiatan lainnya seperti Release Party, Launching LAOS,
+                Pelatihan Linux, Pelatihan manajemen jaringan, dan masih banyak lainnya.</p>
+        			<p><a href="http://laos.ilkom.unej.ac.id">http://laos.ilkom.unej.ac.id</a></p>
       </div>
       </div>
   </body>
