--- a/option.html
+++ b/option.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Pendaftaran</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style4.css">
     <link rel="icon" type="image/png" href="logo.png">
   </head>
   <body>
-    <div class="header">
+<header>
       <div id="logo">
         <img height="60" width="60" src="logo.png">
     </div>
@@ -18,34 +18,31 @@
   <div class="dropdown">
   <button class="drop"> ☰ </button>
   <div class="dropdown-content">
-    <a href="beranda.html">Beranda</a>
-    <a href="#">Struktur BEM</a>
-    <a href="#">Struktur BPM</a>
-    <a href="#">Struktur HIMASIF</a>
-    <a href="shimatiif.html">Struktur HIMATIIF</a>
-    <a href="sal.html">Struktur Al-Azhar </a>
+    <a href="home.html">Beranda</a>
+    <a href="s.html">Ormawa</a>
+    <a href="bem.html">Profil</a>
     <a href="option.html">Pendaftaran</a>
   </div>
   </div>
+</header>
   </body>
-  </head>
   <body>
-  <div class="option">
-    <br><br>
-    <p><b> Pilih Organisasi : </b></p>
-    <div class="list">
-    <a href="form bem.html">BEM</a><br>
-    <a href="form bpm.html">BPM</a><br>
-    <a href="form himasif.html">HIMASIF</a><br>
-    <a href="himatiif.html">HIMATIIF</a><br>
-    <a href="al.html">Al-Azhar </a><br>
-</div>
-
-<div class = "footer">
-  <p> Copyright©Ari Puji Astuti-Sintya Septina Rianti</p>
-</div>
-<br><br>
-<br><br>
-  </div>
+    <div class="badan">
+      <div class="contentt">
+        <p><b> Pilih Organisasi : </b></p>
+        <a href="form bem.html">● BEM</a><br>
+        <a href="form bpm.html">● BPM</a><br>
+        <a href="form himasif.html">● HIMASIF</a><br>
+        <a href="shimatiif.html">● HIMATIIF</a><br>
+        <a href="form laos.html">● Laos </a><br>
+        <a href="fmacho.html">● Macho </a><br>
+        <a href="fetalase.html">● Etalase </a><br>
+        <a href="bin.html">● Binary </a><br>
+        <a href="bal.html">● Balwana </a><br>
+      </div>
+      </div>
   </body>
+          <footer>
+      <p> Copyright©Ari Puji Astuti-Sintya Septina Rianti</p>
+  </footer>
 </html>
