--- a/shimatiif.html
+++ b/shimatiif.html
@@ -2,12 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Struktur Organisasi HIMATIIF</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Form HIMATIF</title>
+    <link rel="stylesheet" href="style4.css">
     <link rel="icon" type="image/png" href="logo.png">
   </head>
   <body>
-    <div class="header">
+<header>
       <div id="logo">
         <img height="60" width="60" src="logo.png">
     </div>
@@ -18,32 +18,23 @@
   <div class="dropdown">
   <button class="drop"> ☰ </button>
   <div class="dropdown-content">
-    <a href="beranda.html">Beranda</a>
-    <a href="#">Struktur BEM</a>
-    <a href="#">Struktur BPM</a>
-    <a href="#">Struktur HIMASIF</a>
-    <a href="shimatiif.html">Struktur HIMATIIF</a>
-    <a href="sal.html">Struktur Al-Azhar </a>
+    <a href="home.html">Beranda</a>
+    <a href="s.html">Ormawa</a>
+    <a href="bem.html">Profil</a>
     <a href="option.html">Pendaftaran</a>
   </div>
   </div>
+</header>
   </body>
-
   <body>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <div class="feedback">
-      <p>Yahh..</p>
-      <p>Organisasi ini masih dalam tahap peresmian</p>
-      <p>Sabar dulu ya teman-teman ^_^</p<
-
-    </div>
-
-    <div class = "footer">
-      <p> Copyright©Ari Puji Astuti-Sintya Septina Rianti</p>
-    </div>
+    <div class="badan">
+      <div class="contentt">
+        <p>Yah... Ormawa ini belum buka pendaftaran.<br>
+            nantikan infonya yaa di:<br> <a href="https://www.instagram.com/himatifunej/">https://www.instagram.com/himatifunej/</a></p>
+      </div>
+      </div>
   </body>
+          <footer>
+      <p> Copyright©Ari Puji Astuti-Sintya Septina Rianti</p>
+  </footer>
 </html>
